tests/baselines/reference/multipleDefaultExports05(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
multipleDefaultExports05.ts(1,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports05.ts(3,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports05.ts(5,22): error TS2528: A module cannot have multiple default exports.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== multipleDefaultExports05.ts (3 errors) ====
    export default class AA1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleDefaultExports05.ts:3:22: Another export default is here.
    
    export default class BB1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports05.ts:1:22: The first export default is here.
    
    export default class CC1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports05.ts:1:22: The first export default is here.
    